	  As a temporary measure, you can disable this by defining the
	  environment variable R_NO_BASE_NAMESPACE.

	- UseMethod dispatching now searches for methods in the
	  environment of the caller of the generic function rather
	  than the environment where the generic is defined.

    o	New methods ([[, print, str) for "dendrogram" class.


C-LEVEL FACILITIES

    o	Rversion.h is no longer automatically included by R.h.
	Include it explicitly if you need it.


BUG FIXES

    o   read.dcf() had a memory leak.



	**************************************************
	*						 *
	*	       1.5 SERIES NEWS			 *
	*						 *
	**************************************************


		CHANGES IN R VERSION 1.5.1


NEW FEATURES

    o   Enhancements to mathematical annotation of plots:

	- expressions involving dot(<something>) now produce a dot accent
	  above the <something> (initial patch from Ben Bolker).

	- within an expression, the symbol partialdiff is now converted
	  to a partial differential symbol (greek delta).


BUG FIXES

    o	Rdconv now skips CRs in input files, even on Unix.

    o	readBin() had a (very slow) memory leak if changing size or reading
	character strings.  writeChar() had a memory leak.

    o	polygon() and rect() with lty = "blank" were omitting the fill
	colour (if present).  symbols(circles=, lty="blank") was
	drawing the border of the disks.

    o	Subsetting non-existent rows in a data frame would produce
	missing row names, which are not allowed.

    o   On Unix, R_PAPERSIZE was set to '' instead of 'a4' as default on
	systems without paperconf.

    o	Under GNOME, capabilities() now reports correctly that X11, png
	and jpeg are available (if they are under X11).

    o	The names of some results of unlist() had the wrong internal
	length, which confused paste().  Both have been corrected. (PR#1524)

    o   RweaveLatex.Rd had unbalanced braces in section "Supported
        Options".
