@@ -8,15 +8,3 @@
 		  "See ?Deprecated.",
 		  sep = ""), call. = FALSE)
 }
-
-## Deprecated in 1.5.0
-piechart <- function(x, labels = names(x), edges = 200, radius = 0.8,
-              density = NULL, angle = 45, col = NULL,
-              main = NULL, ...)
-{
-    .Deprecated("pie")
-    mcall <- match.call()
-    mcall[[1]] <- as.name("pie")
-    eval(mcall, parent.frame())
-}
-## </Deprecated>
