@@ -1677,6 +1677,8 @@ static int SymbolValue(int c)
     return SYMBOL;
 }
 
+static int not_warned_on_underline = 1;
+
 /* Split the input stream into tokens. */
 /* This is the lowest of the parsing levels. */
 
@@ -1731,6 +1733,9 @@ static int token()
 
     if (c == '_') {
 	yylval = install("<-");
+	if(not_warned_on_underline) 
+	    warning("The use of _ is deprecated: you will be warned only once per session");
+	not_warned_on_underline = 0;
 	return LEFT_ASSIGN;
     }
 
